Fix padding issue on Safari

--- a/src/App.css
+++ b/src/App.css
@@ -31,6 +31,7 @@
 
 .header {
   width: 100%;
+  height: 10%;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -136,6 +137,13 @@
   cursor: pointer;
 }
 
+.store_badge.safari {
+  height: 100%;
+  width: auto;
+  padding-right: 45px;
+  cursor: pointer;
+}
+
 @media all and (orientation:portrait) {
   .header {
     height: 10%;
@@ -179,6 +187,10 @@
     padding-right: 5px;
   }
 
+  .store_badge.safari {
+    padding-right: 5px;
+  }
+
   .credits {
     font-size: 0.8em;
     margin-top: 15px;
@@ -197,6 +209,10 @@
   }
 
   .store_badge {
+    padding-right: 5px;
+  }
+
+  .store_badge.safari {
     padding-right: 5px;
   }
 
